--- a/Probability/Homework8/HW_Lesson8.ipynb
+++ b/Probability/Homework8/HW_Lesson8.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "international-bread",
-   "metadata": {},
-   "source": [
-    "## <center>Практическое задание к лекции 8."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "afraid-catholic",
    "metadata": {},
    "source": [
@@ -21,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "spatial-optimization",
    "metadata": {},
    "outputs": [],
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "mighty-writer",
    "metadata": {},
    "outputs": [],
@@ -64,17 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "referenced-volleyball",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "F_onewayResult(statistic=5.500053450812596, pvalue=0.010482206918698694)"
+       "F_onewayResult(statistic=5.500053450812596, pvalue=0.010482206918698693)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +109,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d8d79bb7dfd3efd41cded07f0e6b0b8ff7eeb85c11f674a18bf8b16f7e11e01b"
+   }
   }
  },
  "nbformat": 4,
